# cipher-cli

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: arguments.cpp  cipher.cpp  main.cpp
